--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="section" id="plan">
                 <h1>Practicing Git at Bucknell</h1>
                 <div class="minileft">
-                        <div><img src="bison.jpg" /></div>
+                        <div><img src="bison.png" /></div>
                         <div><img src="ton.jpg" /></div>
                 </div>
 
