--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
 		<p>... is leading us into war.  <a href="http://en.wikipedia.org/wiki/Clone_Wars_(Star_Wars)">The Clone Wars</a>, that is.</p>
 
+                
                 <h2>"Adding", "committing" and "pushing" changes...</h2>
-
-		<p>... you just said three things that all mean the same thing.</p>
+		<p>Add- This command updates the index using the current content found in the working tree, to prepare the content staged for the next commit. </p>
+                <p>Commit - Record changes to the repository  </p> 
+                <p>Push - Update remote refs along with associated objects</p>
 
                 <h2>You need to fork when...</h2>
 
